--- a/css/main.css
+++ b/css/main.css
@@ -2,32 +2,52 @@
 /* CSS Document */
 body {
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
+	background-color: #fff;
 }
 
 .profile {
 	float: right;
 	position: relative;
-  	width: 40%;
+  	width: 30%;
   	height: auto;
   	border-radius: 50%;
-	margin: 10% 0%;
 }
 
 .about-text {
-	margin: 10% 0%;
 	width: 60%;
 	vertical-align: middle;
 	position: relative;
 }
 
+#body { 
+	float: right;
+	padding: 3%;
+}
+
 #name {
-	font-size: 50px;
+	font-size: 40px;
 }
 
 #details {
-	font-size: 20px;
+	font-size: 16px;
 }
 
-.footer {
+#navbar {
+	position: fixed;
+	float: left;
+	top: 0;
+	width: 10%;
+	z-index: 1;
+	text-align: right;
+	padding: 5%;
+	
+}
+
+#navbar a, #footer a {
+	margin: 5px;
+	color: black;
+}
+
+#header, #footer {
 	font-size: 12px;
 }
