--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,74 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	background-color: #fff;
 }
 
-.profile {
-	float: right;
+#big-container {
+	margin: 0vh 10vw;
+	width: 80vw;
+	padding: 0px;
+}
+
+#body {
 	position: relative;
-  	width: 30%;
-  	height: auto;
+	width: 75%;
+	margin: 0px;
+}
+
+.section {
+	height: auto;
+	min-height: 200px;
+}
+
+.column {
+	float: right;
+	background-color: #f65314;
+	height: 600px;
+	width: 125px;
+}
+
+.circle {
+	background-color: #f65314;
+	margin-top: 150px;
+	margin-left: -87.5px;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+}
+
+.icon {
+	position: relative;
+	float: right;
+	margin-top: 5vh;
+	width: 250px;
+	height: 250px;
   	border-radius: 50%;
 }
 
-.about-text {
-	width: 60%;
+.content {
+	width: 80%;
 	vertical-align: middle;
 	position: relative;
-}
-
-#body { 
-	float: right;
-	padding: 3%;
+	margin-top: 5vh;
+	font-size: 16px;
 }
 
 #name {
 	font-size: 40px;
 }
 
-#details {
-	font-size: 16px;
-}
-
-#navbar {
+#sidebar {
 	position: fixed;
-	float: left;
-	top: 0;
-	width: 10%;
-	z-index: 1;
-	text-align: right;
-	padding: 5%;
-	
+	top: 5vh;
+	left: 75%;
+	height: 100vh;
+	font-size: 12px;
 }
 
-#navbar a, #footer a {
+#sidebar a, #footer a {
 	margin: 5px;
 	color: black;
-}
-
-#header, #footer {
 	font-size: 12px;
 }
