--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@ body {
 }
 
 .content {
-	width: 80%;
 	vertical-align: middle;
 	position: relative;
 	margin-top: 5vh;
@@ -67,7 +66,7 @@ body {
 	font-size: 12px;
 }
 
-#sidebar a, #footer a {
+#sidebar a, #footer {
 	margin: 5px;
 	color: black;
 	font-size: 12px;
