--- a/css/main.css
+++ b/css/main.css
@@ -6,66 +6,35 @@
 
 body {
 	font-family: Roboto, PT Sans, Helvetica Neue;
-	background-color: #fff;
+	background-color: #F0F0F0;
+}
+
+h1 {
+	color: var(--theme-color);
 }
 
 #big-container {
 	position: relative;
 	margin: 0vh 5vw;
 	width: 90vw;
-	min-height: 100vh;
 	padding: 0px;
 }
 
 #body {
 	position: relative;
-	width: 75%;
+	width: 100%;
 	margin: 0px;
+	padding-top: 30px;
 }
 
 .section {
 	height: auto;
-	min-height: 300px;
-}
-
-.column {
-	float: right;
-	background-color: var(--theme-color);
-	position: relative;
-	height: 200%;
-	min-height: 300px;
-	width: 25px;
-}
-
-.circle {
-	background-color: var(--theme-color);
-	margin-top: 5vh;
-	margin-left: -87.5px;
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-}
-
-.icon {
-	margin-top: 25%;
-	margin-left: 17.5%;
-	align-self: center;
-	height: 50%;
-	width: 65%;
-	opacity: 0.9
-}
-
-.content {
-	vertical-align: middle;
-	position: relative;
-	margin-top: 5vh;
-	font-size: 16px;
-	width: 80%;
+	width: 100%;
+	margin-bottom: 10px;
 }
 
 #sidebar {
 	position: fixed;
-	top: 5vh;
 	left: 80%;
 	height: 100vh;
 	font-size: 12px;
@@ -77,16 +46,20 @@ body {
 }
 
 .footer {
-	position: absolute;
 	width: 100vw;
-	bottom: 0;
 	text-align: center;
-	z-index: 1;
-	background-color: #D9D9D9;
+}
+
+.content {
+	vertical-align: middle;
+	position: relative;
+	font-size: 16px;
+	width: 80%;
 }
 
 .badge-light {
-	background-color: white;
+	background-color: var(--theme-color);
+	color: white;
 }
 
 .proj-modal {
@@ -100,6 +73,42 @@ body {
     opacity: 0.3 !important;
 }
 
-h1 {
-	color: var(--theme-color);
+.proj-tabs-vertical {
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+	float: left;
+}
+
+.proj-tab {
+	width: 100%;
+	min-height: 50px;
+	background-color: white;
+	border: 1px solid rgba(0,0,0,.125);
+	text-align: center;
+	padding: 15px;
+}
+
+#proj-display { 
+	width: 100%;
+}
+
+.proj-link {
+	float: right;
+}
+
+.carousel-indicators li {
+	background-color: darkgray;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	margin: 1px;
+}
+
+.carousel-indicators .active {
+	background-color: dimgray;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	margin: 1px;
 }
