--- a/css/main.css
+++ b/css/main.css
@@ -84,13 +84,19 @@ h1 {
 	width: 100%;
 	min-height: 50px;
 	background-color: white;
-	border: 1px solid rgba(0,0,0,.125);
+	border: 2px solid rgba(0,0,0,.125);
 	text-align: center;
 	padding: 15px;
+	border-radius: 5px;
+}
+
+.proj-tab.active {
+	background-color: #B9B9B9;
 }
 
 #proj-display { 
-	width: 100%;
+	width: 80%;
+	float: right;
 }
 
 .proj-link {
@@ -111,4 +117,12 @@ h1 {
 	width: 12px;
 	height: 12px;
 	margin: 1px;
+}
+
+.card {
+	display: none;
+}
+
+.card.active {
+	width: 100%;
 }
